step 2: button with states. added handle of the click method observable

--- a/src/app/zipcode-entry/zipcode-entry.component.html
+++ b/src/app/zipcode-entry/zipcode-entry.component.html
@@ -2,12 +2,8 @@
   <h2>Enter a zipcode:</h2>
   <input type="text" #zipcode placeholder="Zipcode" class="form-control">
   <br>
-  <button class="btn btn-primary" (click)="addLocation(zipcode.value)">
-    Add location
-  </button>
-  <app-state-button [initialTemplate]="initial" [workingTemplate]="adding" [doneTemplate]="done"
-    (click)="addLocation(zipcode.value)">
-  </app-state-button>
+  <app-state-button [clickAction]="addLocation.bind(this)" [initialTemplate]="initial" [workingTemplate]="adding"
+    [doneTemplate]="done"></app-state-button>
 
 </div>
 
