--- a/src/app/zipcode-entry/zipcode-entry.component.html
+++ b/src/app/zipcode-entry/zipcode-entry.component.html
@@ -1,14 +1,15 @@
 <div class="well">
-  
-  <app-input-autocomplete [inputName]="'country'" [label]="'Country name'" [options$]="countriesOptions$"></app-input-autocomplete>
-  <br>
-  
-  <label for="zipcode">Enter a zipcode :</label>
-  <input id="zipcode" type="text" #zipcode placeholder="Zipcode" class="form-control">
-  <br>
 
-  <app-state-button [clickAction]="addLocation.bind(this)" [initialTemplate]="initial" [workingTemplate]="adding"
-    [doneTemplate]="done"></app-state-button>
+  <form [formGroup]="form" (ngSubmit)="addLocation()">
+    <app-input-autocomplete formControlName="countrycode" [inputName]="'country'" [label]="'Country name'" [options$]="countriesOptions$"></app-input-autocomplete>
+    <br>
+    
+    <label for="zipcode">Enter a zipcode :</label>
+    <input id="zipcode" type="text" #zipcode placeholder="Zipcode" class="form-control" formControlName="zipcode">
+    <br>
+    <app-state-button [clickAction]="addLocation.bind(this)" [initialTemplate]="initial" [workingTemplate]="adding"
+      [doneTemplate]="done"></app-state-button>
+  </form>
 
 </div>
 
