--- a/src/app/input-autocomplete/input-autocomplete.component.html
+++ b/src/app/input-autocomplete/input-autocomplete.component.html
@@ -1,6 +1,6 @@
-<label for="{{inputName}}">{{ label }} :</label>
-<input #input id="{{inputName}}" type="text" placeholder="Enter {{ label | lowercase }}" [formControl]="formControl"
-  (focus)="inputHasFocus = true" class="form-control" />
+<label [for]="inputName">{{ label }} :</label>
+<input [id]="inputName" type="text" placeholder="Enter {{ label | lowercase }}" [formControl]="formControl"
+  (focus)="inputHasFocus = true" (blur)="onTouched()" (input)="onTouched()" class="form-control" />
 
 <ul *ngIf="inputHasFocus">
   <li *ngFor="let item of filteredOptions$ | async" [innerHTML]="item.label | highlight:formControl.value"
